fixing screenshots tag alignment on mobile

--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -149,8 +149,17 @@ nav {
 		font-size: 2.5em;
 	}
 	.screenshots {
+		float: none;
+		width: auto;
+		text-align: left;
+		margin: 0;
+
+		a {
+			margin: 0 0.5em 0 0;
+		}
+
 		&:before {
-			right: initial;
+			right: auto;
 			left: 0;
 		}
 	}
